--- a/src/logic/tex/corelogic-syntax.tex
+++ b/src/logic/tex/corelogic-syntax.tex
@@ -53,7 +53,7 @@ Das e steht für \dq{}everyline\dq{} bzw. das jede Zeile von \code{conde} erfolg
 (Soft cut) Sobald der \dq{}HEAD\dq{} einer Bedingungsanweisung erfolgreich ist, liefert \code{conda} \code{true} zurück und ignoriert alle nachfolgenden Anweisungen. \code{conda} ist nicht-relational.
 
 \item \code{condu}:
-(Commited choice) Soblad der \dq{}HEAD\dq{} einer Bedingungsanweisung erfolgreich ist, ŵerden die verbleibenden \dq{}goals\dq{} der Anweisung nur einmal ausgeführt. \code{condu} ist nicht-relational.
+(Commited choice) Soblad der \dq{}HEAD\dq{} einer Bedingungsanweisung erfolgreich ist, werden die verbleibenden \dq{}goals\dq{} der Anweisung nur einmal ausgeführt. \code{condu} ist nicht-relational.
 
 \item \code{membero}, \code{anyo}:
 Das \dq{}o\dq{} bedeutet das hier eine Relation behandelt wird.
