--- a/src/logic/tex/corelogic-sources.tex
+++ b/src/logic/tex/corelogic-sources.tex
@@ -1,17 +1,17 @@
 \section{Quellen}
 
 \begin{itemize}
-\item Computer Science Technical Report 95-10 LIBRA: A Lazy Interpreter of Binary Relational Algebra; Barry Dwyer - http://cs.adelaide.edu.au/users/dwyer/TR95-10_TOC.html
+\item Computer Science Technical Report 95-10 LIBRA: A Lazy Interpreter of Binary Relational Algebra; Barry Dwyer - \url{http://cs.adelaide.edu.au/users/dwyer/TR95-10_TOC.html}
 
-\item Tutorial von David Nolen - https://github.com/swannodette/logic-tutorial
+\item Tutorial von David Nolen - \url{https://github.com/swannodette/logic-tutorial}
 
-\item Offizielle Homepage miniKanren - http://miniKanren.org
+\item Offizielle Homepage miniKanren - \url{http://miniKanren.org}
 
-\item Community-Hilfe - https://github.com/frenchy64/Logic-Starter/wiki
+\item Community-Hilfe - \url{https://github.com/frenchy64/Logic-Starter/wiki}
 
-\item Offizielles Github Repository von David Nolen und Rich Hickey - https://github.com/clojure/core.logic
+\item Offizielles Github Repository von David Nolen und Rich Hickey - \url{https://github.com/clojure/core.logic}
 
-\item core.logic Wiki - https://github.com/clojure/core.logic/wiki
+\item core.logic Wiki - \url{https://github.com/clojure/core.logic/wiki}
 
-\item Relational Programming in miniKanren: Techniques, Applications, and Implementations; William E. Byrd - https://scholarworks.iu.edu/dspace/bitstream/handle/2022/8777/Byrd_indiana_0093A_10344.pdf?sequence=1
+\item Relational Programming in miniKanren: Techniques, Applications, and Implementations; William E. Byrd - \url{https://scholarworks.iu.edu/dspace/bitstream/handle/2022/8777/Byrd_indiana_0093A_10344.pdf?sequence=1}
 \end{itemize}
