--- a/src/logic/tex/corelogic.tex
+++ b/src/logic/tex/corelogic.tex
@@ -92,7 +92,7 @@
 %==============================================================================
 % Bibliography
 %==============================================================================
-\bibliography{03}
+\input{corelogic-sources}
 
 \end{document}
 
