--- a/src/logic/tex/corelogic-zebrapuzzle.tex
+++ b/src/logic/tex/corelogic-zebrapuzzle.tex
@@ -85,4 +85,4 @@ In diesem Fall kann man die Ausgangsfragen beantworten:
   \item Wer trinkt Wasser?
   \item Wer hat den Fisch?
 \end{enumerate}
-Die Ausgabe sagt aus, das wir in jedem Fall an beiden Stellen zwei voneinander verschiedene Ergebnisse haben. Somit wäre eine plausible Lösung in unserem Fall, das der Norweger Wasser trinkt und der Japaner einen Fisch hat. Ob Fisch und Wasser oder andere Haustiere und Getränke gefragt sind, kommt natürlich auf die Fragestellung an.
+Die Ausgabe sagt aus, dass wir in jedem Fall an beiden Stellen zwei voneinander verschiedene Ergebnisse haben. Somit wäre eine plausible Lösung in unserem Fall, das der Norweger Wasser trinkt und der Japaner einen Fisch hat. Ob Fisch und Wasser oder andere Haustiere und Getränke gefragt sind, kommt natürlich auf die Fragestellung an.
