--- a/src/logic/tex/corelogic-coredotlogic.tex
+++ b/src/logic/tex/corelogic-coredotlogic.tex
@@ -2,9 +2,9 @@
 
 \subsection{Allgemeines zu core.logic}
 
-Die Clojure-Erweiterung core.logic bietet die Möglichkeit, in Clojure, Prolog-ähnlich verschieden Programmierparadigmen zu verfolgen, wie z.B. die einfache logische Programmierung oder auch die logische Constraintprogrammierung. Damit soll eine einfache Möglichkeit geschaffen werden, bei der Lösung von logischen Problemen, die bestehenden Mittel (von core.logic) zu nutzen oder auch zu erweitern.
+Die Clojure-Erweiterung core.logic bietet die Möglichkeit, in Clojure, Prolog-ähnlich verschieden Programmierparadigmen zu verfolgen, wie z.B. die einfache logische Programmierung oder auch die logische Constraintprogrammierung. Es damit soll eine einfache Möglichkeit geschaffen werden, bei der Lösung von logischen Problemen, die bestehenden Mittel (von core.logic) zu nutzen oder auch zu erweitern.
 
-Momentan stehen David Nolen und Rich Hickey, Erfinder des Lisp-Dialekts Clojure hinter dem quelloffenen Projekt.
+Momentan stehen David Nolen und Rich Hickey, der Erfinder des Lisp-Dialekts Clojure hinter dem quelloffenen Projekt.
 
 core.logic wird stetig weiterentwickelt und erhält immer wieder neue Features und Funktionen. Zum aktuellen Zeitpunkt schafft es core.logic mit der richtigen Implementierung ein Sudoku Rätsel innerhalb von wenigen Sekunden zu lösen. Leider ist core.logic nicht die effizienteste Implementierung eines logischen Programmierparadigmas und terminiert daher etwas langsamer als herkömmliche logische Programmiersprachen.
 
