--- a/src/logic/tex/corelogic-database.tex
+++ b/src/logic/tex/corelogic-database.tex
@@ -75,7 +75,7 @@ Dabei funktioniert nur das Symbol \code{'Vito} und nicht der String \code{"Vito"
 (children "Vito")
 ; => ()
 \end{lstlisting}
-Ein ähnliches Vorgehen für die Ermittlung der Eltern eines Kindes \dq{}c\dq{}. Was vielleicht verwirrt, das wir bei dem Suffix der Funktion relativ willkürlich ein e gewählt haben. Siehe Kapitel ??? von Syntax.
+Ein ähnliches Vorgehen für die Ermittlung der Eltern eines Kindes \dq{}c\dq{}. Was vielleicht verwirrt, das wir bei dem Suffix der Funktion relativ willkürlich ein e gewählt haben. Siehe Kapitel \emph{\nameref{sec:function}}.
 
 \begin{lstlisting}
 (defn parentse [c] 
