--- a/src/logic/tex/corelogic-syntax.tex
+++ b/src/logic/tex/corelogic-syntax.tex
@@ -12,7 +12,7 @@ Dieser Ausdruck liest sich wie folgt: ''Nimm die logischen Ausdrücke, lass den 
 \\
 Um nicht bei jedem Aufruf der \code{run} Funktion alle Werte der logischen Variable zu bekommen, sondern nur endlich viele, kann man den * nach \code{run} durch eine Zahl ersetzen die der Anzahl der Werte entspricht die zurück gegeben werden sollen.
 
-\subsubsection{Die wichtigsten Funktionen}
+\subsubsection{Die wichtigsten Funktionen}\label{sec:functions}
 
 core.logic basiert, "ahnlich wie miniKanren, auf 3 grundlegenden Funktionen.
 \begin{description}
