--- a/src/logic/tex/corelogic.tex
+++ b/src/logic/tex/corelogic.tex
@@ -47,7 +47,7 @@
 %\graphicspath{{}{}}
 
 \title{Logik in Clojure mit core.logic}
-\author{Chris Weber und Julian Schmitt}
+\author{Julian Schmitt und Chris Weber}
 
 %==============================================================================
 %
