--- a/src/logic/tex/corelogic-relational.tex
+++ b/src/logic/tex/corelogic-relational.tex
@@ -19,6 +19,7 @@ Somit können wir unseren Solver nutzen, um zu prüfen ob eine bestimmte Kombina
 plus_o Relation	 N x N x N
 		-(1 1 1)- nicht erlaubt
 		 (1 1 2) erlaubt
+		 ...
 \end{lstlisting}
 Relationale Programmierung kann rückwärts ausgewertet werden
 
@@ -26,4 +27,9 @@ Relationale Programmierung kann rückwärts ausgewertet werden
 (run* [q] (== q (plus_o (1 1 q))))
 (run* [q] (== q (plus_o (q 1 3))))
 (run* [q r] (== q (plus_o q r 3)))
+(run* [q r] (== q (plus_o q 1 r)))
+(run* [q r s] (== q (plus_o q r s)))
 \end{lstlisting}
+Deshalb können wir über folgende Relation die Aufgabe mit verschieden umfangreichen Ergebnissen \dq{}lösen\dq{}. Die erste und zweite Zeile ergeben z.B. 2 da \code{1+1=2} und nur 2 mit 1 zusammengenommen 3 ergibt. Zeile 3 hat ein festes Ergebnis und somit ist \code{q} und \code{r} auch begrenzt und es gibt keine unendlich vielen Möglichkeiten. Zeile 4 hat als Ergebnis eine logische Variable und somit gibt es hier unendliche viele Möglichkeiten \code{q} und \code{r} anzuordnen, sodass mit \code{1} eine natürliche Zahl herauskommt. In der letzten Zeile ergibt sich dann auch eine unendliche Zahl an Möglichkeiten, die natürlichen Zahlen zu einer Kombination anzuordnen die als Summe eine natürliche Zahl ergeben.
+
+
